Fix alignment logo section

--- a/src/app/integration/main/main.component.scss
+++ b/src/app/integration/main/main.component.scss
@@ -8,8 +8,7 @@
   &--logo-header-section {
     background-color: #FFFFFF;
     position: absolute;
-    top: -76px;
-    padding: 9px 2px 3px 16px;
+    top: -72px;
     border-right: 1px solid #DFDFE2;
     right: 0px;
   }
