--- a/src/styles.scss
+++ b/src/styles.scss
@@ -441,6 +441,16 @@ table {
   &--back-btn {
     padding-left: 20px;
   }
+
+  &--logo-section {
+    padding: 10px 5px 2px 6px;
+    height: 72px;
+    width: 244px;
+  }
+
+  &--qbo-logo {
+    margin-right: 21px;
+  }
 }
 
 .mapping {
